// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commands/loot/list should configure properly 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "loot-list",
      Object {
        "aliases": Array [
          "loot-list",
          "ll",
        ],
        "category": "Loot",
        "channelRestriction": "guild",
        "description": Object {
          "content": "List all loot in the lootbox",
          "examples": Array [
            "loot-list",
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`commands/loot/list should list the loot 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "__**Common**__
N/A

__**Uncommon**__
Test Loot 1
Test Loot 2

",
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": Promise {},
    },
  ],
}
`;
